--- a/index.html
+++ b/index.html
@@ -3,18 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<Link red="stylesheet" hred="style.css">
     <title>EM BUSCA DA CIDADE PERDIDA</title>
 </head>
 <body>
-    <div class="passo"id="passo-0>
-        <P>HÁ UMA CIDADE PERDIDA E PARA ENCONTRA-LÁ, DECIDI SEGUIR ALGUMAS PISTAS</P>
+  <main>
+ <div class="passo" id="passo-0">
+    <P>HÁ UMA CIDADE PERDIDA E PARA ENCONTRA-LÁ, DECIDI SEGUIR ALGUMAS PISTAS</P>
 <button class="btn-próximo" data-próximo="1">RIO DE JANEIRO</button>
 <button class="btn-próximo" data-próximo="2" PERNAMBUCO></button>
 </div>
-<div class="passo"id="passo-1>
-    <P> VOÇE COMEÇA SUA JORNADA NO RIO DE JANEIRO, SUBINDO O PICO PARA ENCONTRAR A PRIMEIRA PISTA</P>
-<button class="btn-próximo" data-próximo="1">RIO DE JANEIRO</button>
-<button class="btn-próximo" data-próximo="2" PERNAMBUCO></button>
+<div class="passo" id="passo-1">
+    <P>VOÇE COMECÇA SUA JORNADA NO RIO DE JANEIRO, SUBINDO O PICO DA TIJUCA PARA ENCONTRAR A PRIMEIRA PISTA</P>
+<button class="btn-próximo" data-próximo="3"> PROCURAR A PISTA NO TOPO DO PICO</button>
+<button class="btn-próximo" data-próximo="4" > DESISTIR E VOLTAR PARA CASA</button>
+</div>
+</main>
 
 </body>
 </html>
